tests/ui/mismatched_types/string-clone-mismatch-61106.rs
// https://github.com/rust-lang/rust/issues/61106
fn main() {
    let x = String::new();
    foo(x.clone()); //~ ERROR mismatched types
}

fn foo(_: &str) {}
